--- a/autocomplete/package.json
+++ b/autocomplete/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@apollo/client": "^3.10.8",
     "@material-ui/core": "^4.12.4",
-    "@mui/material": "^5.16.0",
+    "@material-ui/lab": "^4.0.0-alpha.61",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
